2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/Project.cs: Add API for automatically setting
	build action on new files.

	* MonoDevelop.Projects/ProjectFile.cs: Set default build action so it's
	never null.

2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	upped code completion format for "Bug 442147 - Autocompletion shows
	get_ and set_ methods that should not be shown.".

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.addin.xml: Bump MD version.

2008-11-05  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: optimized
	GetNamespaceContents

2008-11-05  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Projects.Dom/IMethod.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/ResolveResult.cs: Fixed bug 'Bug 441671 -
	Finalisers show up in code completion'.

2008-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/DotNetProjectConfiguration.cs: Strongly type
	ParentItem.

2008-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: New IsLibraryBasedProjectType
	property consolidates code in base class and allows language
	bindings' GUIs to disable compilation options that shouldn't be
	altered for ASP.NET and Moonlight projects.

2008-11-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/SlnData.cs:
	* MonoDevelop.Projects.Formats.MSBuild/SlnFileFormat.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildFileFormat.cs: Properly
	save the product number when converting between msbuild formats.

2008-11-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs: Use the
	original assembly name as base name for satellite assemblies.

	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs: