@@ -1,3 +1,9 @@
+2008-11-07  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: When
+	writing back the project, reuse the old properties in the msbuild
+	file, so the order will not change.
+
 2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Projects/Project.cs: Add API for automatically setting
